  in regrtest, with warnings if the called test modifies them.

- Issue #7042: Fix test_signal (test_itimer_virtual) failure on OS X 10.6.

C-API
-----

- Make PyUnicode_CompareWithASCIIString return not equal if the Python string
  has '\0' at the end.

- Issue #7414: 'C' code wasn't being skipped properly (for keyword arguments)
  in PyArg_ParseTupleAndKeywords.

Build
-----

- Issue #3920, #7903: Define _BSD_SOURCE on OpenBSD 4.4 through 4.9.

- Issue #7632: When Py_USING_MEMORY_DEBUGGER is defined, disable the
  private memory allocation scheme in dtoa.c and use PyMem_Malloc and
  PyMem_Free instead.  Also disable caching of powers of 5.

- Switch to OpenSSL 0.9.8l on Windows.

- Issue #6603: Change READ_TIMESTAMP macro in ceval.c so that it
  compiles correctly under gcc on x86-64.  This fixes a reported
  problem with the --with-tsc build on x86-64.

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue #6801 : symmetric_difference_update also accepts |.
  Thanks to Carl Chenet.

- Issue #7541: when using ``python-config`` with a framework install the
  compiler might use the wrong library.

- Issue #6491: Allow --with-dbmliborder to specify that no dbms will be built.

- Issue #7589: Only build the nis module when the correct header files are
  found.

Documentation
-------------

- Updating `Using Python` documentation to include description of CPython's
  -J and -X options.

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.

- Update python manual page (options -B, -O0, -s, environment variables
  PYTHONDONTWRITEBYTECODE, PYTHONNOUSERSITE).

- Issue #8909: Added the size of the bitmap used in the installer created by
  distutils' bdist_wininst. Patch by Anatoly Techtonik.


What's New in Python 3.1.1?
===========================

*Release date: 2009-08-13*

Core and Builtins
-----------------

- Issue #6707: dir() on an uninitialized module caused a crash.
